Remove text-shadow to prevent text element from becoming too large

--- a/style/SvgCell.scss
+++ b/style/SvgCell.scss
@@ -130,8 +130,10 @@ $flagTypes: $FLAGGED, $UNCERTAIN;
   @for $i from 1 through 8 {
     &[data-t="#{$i}"][data-s="#{$OPEN}"] .ct {
       fill: var(--cell-threats-#{$i}-color);
-      text-shadow: 1px 1px 2px black, 0 0 40px var(--background-base3),
-        0 0 5px var(--cell-threats-#{$i}-color);
+      // Doesn't work in firefox on android. Element balloons in size
+      // and ruins mouse events.
+      // text-shadow: 1px 1px 2px black, 0 0 40px var(--background-base3),
+      //   0 0 5px var(--cell-threats-#{$i}-color);
       font-size: 1em;
     }
   }
